--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header></header>
     <main>
         <div class="container">
-            <h1>Let's Play</h1>
+            <h1>Let's roll</h1>
             <div class="dice">
-                <p class="Player1">Player 1</p>
+                <p class="Player1">1W4</p>
                 <img class="img1" src="./assets/Dice1.png">
             </div>
             <div class="dice">
-                <p class="Player2">Player 2</p>
+                <p class="Player2">2W4</p>
                 <img class="img2" src="./assets/Dice1.png">
             </div>
         </div>
@@ -27,12 +27,12 @@
                 Roll the Dice
             </button>
         </div>
-        <div class="container bottom">
+        <!-- <div class="container bottom">
             <button type="button" class="butn"
                 onClick="editNames()">
                 Edit Names
             </button>
-        </div>
+        </div> -->
     </main>
     <footer></footer>
     <script src="./wurf.js"></script>
