--- a/index.html
+++ b/index.html
@@ -16,10 +16,17 @@
                 <p class="Player1">1W4</p>
                 <img class="img1" src="./assets/Dice1.png">
             </div>
-            <div class="dice">
-                <p class="Player2">2W4</p>
-                <img class="img2" src="./assets/Dice1.png">
+
+            <div class="zweiW4">
+                <div class="dice">
+                    <p class="Player2">2W4</p>
+                    <img class="img2" src="./assets/Dice1.png">
+                </div>
+                <div class="dice">
+                    <img class="img2" src="./assets/Dice1.png">
+                </div>
             </div>
+
         </div>
         <div class="container bottom">
             <button type="button" class="butn"
