--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
             </div>
 
             <div class="zweiW4">
-                <div class="dice">
-                    <p class="Player2">2W4</p>
-                    <img class="img2" src="./assets/Dice1.png">
-                </div>
-                <div class="dice">
-                    <img class="img2" src="./assets/Dice1.png">
+                <p class="Player2">2W4</p>
+                <div class="zweiW4Row">
+                    <div class="dice">
+                        <img class="img2" src="./assets/Dice1.png">
+                    </div>
+                    <div class="dice">
+                        <img class="img2" src="./assets/Dice1.png">
+                    </div>
                 </div>
             </div>
 
